# isched

./: .clang-tidy  .dockerignore  .gitignore  .scratch.txt.kate-swp  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Catch2-debug-x86_64-data.cmake  Catch2Config.cmake  Doxyfile  FindOpenSSL.cmake  FindSQLite3.cmake  OpenSSL-debug-x86_64-data.cmake  OpenSSLConfig.cmake  README.md  SQLite3Config.cmake  SQLite3ConfigVersion.cmake  USER_STORY_1_COMPLETION_REPORT.md  conan_toolchain.cmake  conanbuildenv-debug-x86_64.sh  conandata.yml  conandeps_legacy.cmake  conanfile.txt  conanrunenv-debug-x86_64.sh  configure.py  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmt-debug-x86_64-data.cmake  httplib-config-version.cmake  httplib-config.cmake  httplib-debug-x86_64-data.cmake  jwt-cpp-Target-debug.cmake  jwt-cpp-config-version.cmake  jwt-cpp-config.cmake  jwt-cpp-debug-x86_64-data.cmake  jwt-cppTargets.cmake  license.txt  module-OpenSSL-debug-x86_64-data.cmake  (+24 more)
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
build-simple/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docker-build/: README.md
docs/: comparable-benchmark-results.md  deployment.md  graphql_http_startup.md  graphql_resolvers_readme.md  isched_gql_grammar_readme.md  performance.md  resolve_criticals.md  security-threat-model.md  speckit-reference.md
docs/graph-ql-spec/: GraphQL.html
docs/guides/: directives.md
specs/001-universal-backend/: closeout-validation.md  data-model.md  performance-protocol.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup  threat-model.md
specs/001-universal-backend/checklists/: requirements.md
specs/001-universal-backend/contracts/: graphql-schema.md  http-api.md
specs/002-comparable-benchmark/: plan.md  research.md  spec.md  tasks.md
specs/003-seed-mode-admin-ui/: plan.md  research.md  spec.md  tasks.md
src/docker/: Dockerfile
src/main/cpp/isched/: CMakeLists.txt  GqlParser.cpp  GqlParser.hpp  GraphQlParser.cpp  GraphQlParser.hpp  isched.hpp  isched_BaseResolver.cpp  isched_BaseResolver.hpp  isched_DocRootResolver.cpp  isched_DocRootResolver.hpp  isched_DocRootSvc.cpp  isched_DocRootSvc.hpp  isched_EHttpMethods.hpp  isched_ExceptionBase.cpp  isched_ExceptionBase.hpp  isched_ExceptionDocPathNotFound.cpp  isched_ExceptionDocPathNotFound.hpp  isched_ExceptionUnknownEnumValue.hpp  isched_GqlParser.cpp  isched_GqlParser.hpp  isched_LogEnvLoader.hpp  isched_MainSvc.cpp  isched_MainSvc.hpp  isched_SingleActionResolver.cpp  isched_SingleActionResolver.hpp  isched_base_resolver.cpp  isched_doc_root_resolver.cpp  isched_doc_root_resolver.hpp  isched_doc_root_rest_resolver.cpp  isched_doc_root_rest_resolver.hpp  isched_doc_root_svc.cpp  isched_doc_root_svc.hpp  isched_e_http_methods.hpp  isched_exception_base.cpp  isched_exception_doc_path_not_found.cpp  isched_exception_doc_path_not_found.hpp  isched_gql_grammar.hpp  isched_gql_parser.cpp  isched_gql_parser.hpp  isched_main_svc.cpp  (+5 more)
src/main/cpp/isched/backend/: built_in_schema.cpp  built_in_schema.hpp  isched_AuthenticationMiddleware.cpp  isched_AuthenticationMiddleware.hpp  isched_BaseRestResolver.cpp  isched_BaseRestResolver.hpp  isched_CryptoUtils.cpp  isched_CryptoUtils.hpp  isched_DatabaseManager.cpp  isched_DatabaseManager.hpp  isched_DocRootRestResolver.cpp  isched_DocRootRestResolver.hpp  isched_DocRootSvc.cpp  isched_DocRootSvc.hpp  isched_EErrorCodes.hpp  isched_EHttpMethods.hpp  isched_ExecutionResult.hpp  isched_GqlExecutor.cpp  isched_GqlExecutor.hpp  isched_GqlParser.cpp  isched_GqlParser.hpp  isched_GraphQLExecutor.cpp  isched_GraphQLExecutor.hpp  isched_LogEnvLoader.hpp  isched_MainSvc.cpp  isched_MainSvc.hpp  isched_MetricsCollector.cpp  isched_MetricsCollector.hpp  isched_RateLimiter.hpp  isched_RestDataSource.cpp  isched_RestDataSource.hpp  isched_Server.cpp  isched_Server.hpp  isched_SingleActionRestResolver.cpp  isched_SingleActionRestResolver.hpp  isched_SubscriptionBroker.cpp  isched_SubscriptionBroker.hpp  isched_TenantManager.cpp  isched_TenantManager.hpp  isched_UiAssetRegistry.cpp  (+31 more)
src/main/cpp/isched/shared/: isched_exception_base.cpp  isched_exception_base.hpp  isched_exception_doc_path_not_found.cpp  isched_exception_doc_path_not_found.hpp  isched_exception_unknown_enum_value.hpp
src/main/cpp/isched/shared/config/: isched_config.cpp  isched_config.hpp
src/main/cpp/isched/shared/fs/: isched_fs_utils.cpp  isched_fs_utils.hpp  isched_glob.cpp  isched_glob.hpp
src/main/cpp/isched/shared/ipc/: isched_ipc.cpp  isched_ipc.hpp
src/test/: basic_server_test.cpp  tenant_manager_test.cpp
src/test/GraphQL/: book.graphql
src/test/cpp/integration/: test_admin_ui.cpp  test_bootstrap_platform_admin.cpp  (+15 more)
src/test/cpp/isched/: CMakeLists.txt  database_test.cpp  isched_ast_node_tests.cpp  isched_auth_tests.cpp  isched_config_tests.cpp  isched_database_test.cpp  isched_fs_utils_tests.cpp  isched_glob_tests.cpp  isched_gql_executor_tests.cpp  isched_grammar_tests.cpp  isched_graphql_tests.cpp  isched_ipc_tests.cpp  isched_metrics_tests.cpp  isched_multi_dim_map_tests.cpp  isched_pattern_match_tests.cpp  isched_resolver_tests.cpp  isched_rest_datasource_tests.cpp  isched_rest_hello_world.cpp  isched_srv_tests.cpp  isched_subscription_broker_tests.cpp  isched_tenant_thread_pool_tests.cpp  isched_test_run_listener.cpp  readme.md  rest_hello_world.cpp  schema.graphql
src/test/cpp/isched/graphql-hello-world/: package-lock.json  package.json
src/test/cpp/isched/graphql-hello-world/src/: hello_world_schema.graphql  schema.ts  server.ts
src/test/tools/: README.md
src/ui/: README.md  angular.json  jest.config.ts  package.json  tailwind.config.js
src/ui/src/: index.html  styles.scss
tools/: embed_ui_assets.py  rename_to_snake_case.py
tools/comparable_benchmark/: package.json  tsconfig.json
tools/comparable_benchmark/src/: apollo-server.ts  benchmark.ts  report.ts  runner.ts  types.ts
(+31 files in other folders)
